--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "react": "15.3.2",
     "react-native": "^0.34.1",
-    "react-native-material-design": "^0.3.7"
+    "react-native-material-design": "^0.3.7",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   }
 }
