--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react-native": "^0.34.1",
     "react-native-material-design": "^0.3.7",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.0",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0"
   }
 }
